@@ -24,21 +24,18 @@ import com.arangodb.entity.*;
 import com.arangodb.internal.serde.SerdeUtils;
 import com.arangodb.model.*;
 import com.arangodb.model.DocumentImportOptions.OnDuplicate;
-import com.arangodb.serde.jackson.Id;
+import com.arangodb.serde.annotation.*;
 import com.arangodb.serde.jackson.JacksonSerde;
-import com.arangodb.serde.jackson.Key;
-import com.arangodb.serde.jackson.Rev;
 import com.arangodb.util.*;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.json.JsonMapper;
+import tools.jackson.databind.node.JsonNodeFactory;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -58,7 +55,7 @@ class ArangoCollectionTest extends BaseJunit5 {
     private static final String COLLECTION_NAME = "ArangoCollectionTest_collection";
     private static final String EDGE_COLLECTION_NAME = "ArangoCollectionTest_edge_collection";
 
-    private final ObjectMapper mapper = new ObjectMapper();
+    private final JsonMapper mapper = new JsonMapper();
 
     private static Stream<Arguments> cols() {
         return dbsStream()
@@ -529,7 +526,7 @@ class ArangoCollectionTest extends BaseJunit5 {
         assertThat(createEntity.getKey()).isEqualTo(key);
         assertThat(createEntity.getRev()).isNotNull();
         assertThat(createEntity.getNew()).isNotNull().isInstanceOf(RawBytes.class);
-        Map<String, Object> newDoc = collection.getSerde().getUserSerde().deserialize(createEntity.getNew().get(), Map.class);
+        Map<String, Object> newDoc = collection.getSerde().getUserSerde().deserialize(createEntity.getNew().get(), Map.class, RequestContext.EMPTY);
         assertThat(newDoc).containsAllEntriesOf(doc);
     }
 
@@ -587,7 +584,7 @@ class ArangoCollectionTest extends BaseJunit5 {
         assertThat(res.getErrors()).hasSize(1);
         assertThat(res.getDocumentsAndErrors()).hasSize(3);
         assertThat(res.getDocumentsAndErrors().get(0)).isSameAs(res.getDocuments().get(0));
-        assertThat(res.getDocumentsAndErrors().get(1)).isSameAs(res.getErrors().get(0));
+        assertThat(res.getDocumentsAndErrors().get(1)).isSameAs(res.getErrors().getFirst());
         assertThat(res.getDocumentsAndErrors().get(2)).isSameAs(res.getDocuments().get(1));
     }
 
@@ -1625,7 +1622,7 @@ class ArangoCollectionTest extends BaseJunit5 {
                 ), new DocumentDeleteOptions().ignoreRevs(false));
         assertThat(info).isNotNull();
         assertThat(info.getDocuments()).hasSize(1);
-        assertThat(info.getDocuments().get(0).getKey()).isEqualTo(a.getKey());
+        assertThat(info.getDocuments().getFirst().getKey()).isEqualTo(a.getKey());
         assertThat(info.getErrors()).hasSize(1);
     }
 
@@ -1850,7 +1847,7 @@ class ArangoCollectionTest extends BaseJunit5 {
         assertThat(indexResult.getType()).isEqualTo(IndexType.persistent);
         assertThat(indexResult.getUnique()).isFalse();
         assertThat(indexResult.getDeduplicate()).isTrue();
-            assertThat(indexResult.getCacheEnabled()).isFalse();
+        assertThat(indexResult.getCacheEnabled()).isFalse();
     }
 
     @ParameterizedTest
@@ -1991,7 +1988,6 @@ class ArangoCollectionTest extends BaseJunit5 {
 
         cleanCollection(collection);
     }
-
 
 
     @ParameterizedTest
@@ -2156,7 +2152,6 @@ class ArangoCollectionTest extends BaseJunit5 {
         assertThat(indexResult).isNotNull();
         assertThat(indexResult.getDeduplicate()).isFalse();
     }
-
 
 
     @ParameterizedTest
@@ -2419,7 +2414,7 @@ class ArangoCollectionTest extends BaseJunit5 {
                     .isNotNull()
                     .isInstanceOf(RawJson.class);
 
-            JsonNode jn = SerdeUtils.INSTANCE.parseJson(((RawJson) d).get());
+            JsonNode jn = SerdeUtils.parseJson(((RawJson) d).get());
             assertThat(jn.has("aaa")).isTrue();
             assertThat(jn.get("aaa").intValue()).isEqualTo(33);
         }
@@ -2488,7 +2483,7 @@ class ArangoCollectionTest extends BaseJunit5 {
         assertThat(docs.getDocuments()).hasSize(2);
         assertThat(docs.getErrors()).isNotNull();
         assertThat(docs.getErrors()).hasSize(1);
-        assertThat(docs.getErrors().iterator().next().getErrorNum()).isEqualTo(1210);
+        assertThat(docs.getErrors().getFirst().getErrorNum()).isEqualTo(1210);
     }
 
     @ParameterizedTest
@@ -2710,7 +2705,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJson(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJson(ArangoCollection collection) {
         final String values = mapper.writeValueAsString(Arrays.asList(Collections.singletonMap("_key", rnd()),
                 Collections.singletonMap("_key", rnd())));
 
@@ -2726,7 +2721,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonDuplicateDefaultError(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonDuplicateDefaultError(ArangoCollection collection) {
         String k1 = rnd();
         String k2 = rnd();
 
@@ -2745,7 +2740,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonDuplicateError(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonDuplicateError(ArangoCollection collection) {
         String k1 = rnd();
         String k2 = rnd();
 
@@ -2765,7 +2760,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonDuplicateIgnore(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonDuplicateIgnore(ArangoCollection collection) {
         String k1 = rnd();
         String k2 = rnd();
 
@@ -2784,7 +2779,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonDuplicateReplace(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonDuplicateReplace(ArangoCollection collection) {
         String k1 = rnd();
         String k2 = rnd();
 
@@ -2804,7 +2799,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonDuplicateUpdate(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonDuplicateUpdate(ArangoCollection collection) {
         String k1 = rnd();
         String k2 = rnd();
 
@@ -2835,7 +2830,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonDetails(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonDetails(ArangoCollection collection) {
         String k1 = rnd();
         String k2 = rnd();
 
@@ -2856,7 +2851,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonOverwriteFalse(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonOverwriteFalse(ArangoCollection collection) {
         collection.insertDocument(new BaseDocument());
         Long initialCount = collection.count().getCount();
 
@@ -2868,7 +2863,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("cols")
-    void importDocumentsJsonOverwriteTrue(ArangoCollection collection) throws JsonProcessingException {
+    void importDocumentsJsonOverwriteTrue(ArangoCollection collection) {
         collection.insertDocument(new BaseDocument());
 
         final String values = mapper.writeValueAsString(Arrays.asList(Collections.singletonMap("_key", rnd()),
@@ -2879,7 +2874,7 @@ class ArangoCollectionTest extends BaseJunit5 {
 
     @ParameterizedTest
     @MethodSource("edges")
-    void importDocumentsJsonFromToPrefix(ArangoCollection edgeCollection) throws JsonProcessingException {
+    void importDocumentsJsonFromToPrefix(ArangoCollection edgeCollection) {
         String k1 = UUID.randomUUID().toString();
         String k2 = UUID.randomUUID().toString();
 
@@ -2940,8 +2935,8 @@ class ArangoCollectionTest extends BaseJunit5 {
         for (final DocumentDeleteEntity<RawData> i : deleteResult.getDocuments()) {
             assertThat(i.getKey()).isIn("1", "2");
             assertThat(i.getOld()).isNotNull().isInstanceOf(RawJson.class);
-            JsonNode jn = SerdeUtils.INSTANCE.parseJson(((RawJson) i.getOld()).get());
-            assertThat(jn.get("_key").asText()).isEqualTo(i.getKey());
+            JsonNode jn = SerdeUtils.parseJson(((RawJson) i.getOld()).get());
+            assertThat(jn.get("_key").asString()).isEqualTo(i.getKey());
         }
         assertThat(deleteResult.getErrors()).isEmpty();
     }
@@ -3071,7 +3066,7 @@ class ArangoCollectionTest extends BaseJunit5 {
     @MethodSource("cols")
     void updateDocumentsWithDifferentReturnType(ArangoCollection collection) {
         List<String> keys =
-                IntStream.range(0, 3).mapToObj(it -> "key-" + UUID.randomUUID()).collect(Collectors.toList());
+                IntStream.range(0, 3).mapToObj(it -> "key-" + UUID.randomUUID()).toList();
         List<BaseDocument> docs =
                 keys.stream().map(BaseDocument::new).peek(it -> it.addAttribute("a", "test")).collect(Collectors.toList());
 
@@ -3186,9 +3181,9 @@ class ArangoCollectionTest extends BaseJunit5 {
                     .isNotNull()
                     .isInstanceOf(RawJson.class);
 
-            JsonNode jn = SerdeUtils.INSTANCE.parseJson(((RawJson) d).get());
+            JsonNode jn = SerdeUtils.parseJson(((RawJson) d).get());
             assertThat(jn.has("foo")).isTrue();
-            assertThat(jn.get("foo").textValue()).isEqualTo("bar");
+            assertThat(jn.get("foo").stringValue()).isEqualTo("bar");
         }
     }
 
@@ -3305,9 +3300,9 @@ class ArangoCollectionTest extends BaseJunit5 {
                     .isNotNull()
                     .isInstanceOf(RawJson.class);
 
-            JsonNode jn = SerdeUtils.INSTANCE.parseJson(((RawJson) d).get());
+            JsonNode jn = SerdeUtils.parseJson(((RawJson) d).get());
             assertThat(jn.has("foo")).isTrue();
-            assertThat(jn.get("foo").textValue()).isEqualTo("bar");
+            assertThat(jn.get("foo").stringValue()).isEqualTo("bar");
         }
     }
 
@@ -3357,7 +3352,7 @@ class ArangoCollectionTest extends BaseJunit5 {
         assertThat(changedProperties.getCacheEnabled()).isEqualTo(updatedOptions.getCacheEnabled());
         assertThat(changedProperties.getComputedValues())
                 .hasSize(1)
-                .contains(updatedOptions.getComputedValues().get(0));
+                .contains(updatedOptions.getComputedValues().getFirst());
         assertThat(changedProperties.getReplicationFactor().get()).isEqualTo(updatedOptions.getReplicationFactor().get());
         assertThat(changedProperties.getSchema().getLevel()).isEqualTo(CollectionSchema.Level.NEW);
         assertThat(changedProperties.getSchema().getMessage()).isEqualTo(schemaMessage);
@@ -3648,6 +3643,7 @@ class ArangoCollectionTest extends BaseJunit5 {
             this.key = key;
         }
 
+        @Key
         public String getKey() {
             return key;
         }
